--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -8,14 +8,14 @@
     <div class="about-desc get-up brand-brown-bg white health-descp relate">
       <h3 class="text-uppercase font-semibold">What is health design</h3>
       <p class="health-style font-baubodi">Only the fit know how fabulous it feels.</p>
-      <p class="health-descp">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance
+      <p class="health-descp">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs - be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance
         of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
     </div>
   </div>
 
   <div class="about-health brand-brown-bg">
     <div class="container">
-      <h2 class="brand-brown-dark text-center font-baubodi">Health is, after all, about a state of absolute harmony—of the body, mind and spirit.</h2>
+      <h2 class="brand-brown-dark text-center font-baubodi">Health is, after all, about a state of absolute harmony - of the body, mind and spirit.</h2>
       <div class="about-health-content brand-brown-light-bg">
         <div class="row">
           <div class="col-md-5 col-sm-12">
@@ -72,7 +72,7 @@
               <img src="img/about/checks.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Health Checks<span>&amp; Presentations</span></h3>
             </div>
-            <p>We give corporate/ clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
+            <p>We give corporate/clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
               <img src="img/about/workers.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Corporate<span>Care Programmes</span></h3>
             </div>
-            <p>We have corporate packages/presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips</p>
+            <p>We have corporate packages/presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
               <img src="img/about/dna.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Nutrigenomics</h3>
             </div>
-            <p>Synchronising our unique DNA blueprint with our diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine</p>
+            <p>Synchronising our unique DNA blueprint with our diet and lifestyle, known as nutrigenomics, is the key to the exciting new realm of personalised wellness medicine.</p>
           </div>
         </div>
 
