--- a/views/content/coolsculpting.html
+++ b/views/content/coolsculpting.html
@@ -10,8 +10,8 @@
         <div class="row">
           <div class="col-md-6">
             <div class="cool">
-              <h2 class="text-uppercase brand-primary font-semibold">what is cool sculpting ?</h2>
-              <p class="text-justify descp">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure to use controlled cooling to safely target and eliminate diet- and exercise-resistant
+              <h2 class="text-uppercase brand-primary font-semibold">what is coolsculpting ?</h2>
+              <p class="text-justify descp">The CoolSculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure to use controlled cooling to safely target and eliminate diet and exercise resistant
                 fat. CoolSculpting results are proven, noticeable, and lasting, so you'll look and feel great from every angle.</p>
             </div>
           </div>
@@ -116,9 +116,9 @@
             <div class="ready">
               <h2 class="text-uppercase brand-primary font-semibold">are you ready ?</h2>
               <div class="descp">
-                <p class="text-justify m-clear">Are you ready to love every view of you? The sooner you set up your consultation, the sooner you'll see results in the mirror — long-term results in those areas that have resisted all efforts through diet and exercise.
+                <p class="text-justify">Are you ready to love every view of you? The sooner you set up your consultation, the sooner you'll see results in the mirror — long-term results in those areas that have resisted all efforts through diet and exercise.
                 </p>
-                <p class="text-justify m-clear">Contact us on <span><a href="tel:02261312222" >022-61312222</a> / <a href="tel:+919323217232" >+91 - 9323217232</a></span> to find out if the CoolSculpting fat freezing procedure is right for you.</p>
+                <p class="text-justify">Contact us on <span><a href="tel:02261312222" >022-61312222</a> / <a href="tel:+919323217232" >+91 - 9323217232</a></span> to find out if the CoolSculpting fat freezing procedure is right for you.</p>
                 <p>Results and patient experience may vary.</p>
               </div>
             </div>
