--- a/views/content/home.html
+++ b/views/content/home.html
@@ -51,7 +51,7 @@
       <div class="col-md-4 col-sm-12">
         <div class="health-info">
           <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block">sculpting</span></h3>
-          <p class="text-justify health-descp home-coolsculp-descp">The Cool Sculpting procedure eliminates stubborn fat safely and effectively, without surgery or downtime. This fat reduction treatment is the only FDA cleared procedure.</p>
+          <p class="text-justify health-descp home-coolsculp-descp">The CoolSculpting is a procedure that eliminates stubborn fat safely and effectively, without any surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure.</p>
           <a href="#/coolsculpting" class="btn btn-blue text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/cool-sculpting.png" alt="" class="img-responsive">
@@ -279,7 +279,7 @@
           <div class="about-info">
             <h3 class="text-uppercase brand-brown-dark2 font-semibold">About us</h3>
             <h5 class="font-semibold">Only the fit know how fabulous it feels.</h5>
-            <p class="text-justify">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
+            <p class="text-justify">At Selfcare a team of experts create designer diets to balance out a body system that rights itself to suit your needs - be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal, a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
             <div class="more btn-center">
               <a href="#/aboutus" class="text-uppercase btn btn-primary">know more</a>
             </div>
