--- a/views/content/meet.html
+++ b/views/content/meet.html
@@ -42,7 +42,7 @@
             <div class="col-md-6">
                 <div class="exper suman-info">
                     <h4 class="brand-blue title font-semibold">EXPERIENCE</h4>
-                    <p class="text-justify descp">Within a short span of 12 years, Suman has positively influenced the health of thousands of people from different walks of life—including the country’s most powerful industrialists and Bollywood personalities. She had to do it just once, because it was forever. People who've consulted with Selfcare and Suman swear by her. Here are what a few clients say.</p>
+                    <p class="text-justify descp">Within a short span of 12 years, Suman has positively influenced the health of thousands of people from different walks of life - including the country’s most powerful Industrialists and Bollywood personalities. She had to do it just once, because it was forever. People who've consulted with Selfcare and Suman swear by her. Here are what a few clients say.</p>
                 </div>
             </div>
         </div>
