--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="selfcare-image product-detail-banner relate">
+  <div class="selfcare-image">
     <img ng-src="{{product.product.bannerimg|serverimage}}" alt="" class="img-responsive get-center">
   </div>
 
