--- a/views/content/team.html
+++ b/views/content/team.html
@@ -5,8 +5,7 @@
   </div>
   <div class="container" ng-init="teamone=true;teamtwo=false">
     <div class="team-desc health-descp get-up brand-brown-bg white rel">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p></p>
     </div>
   </div>
   <div class="team-members" ng-show="teamone">
@@ -82,7 +81,7 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Nidhi Agarwal</h3>
               <h4 class="brand-primary font-semibold">Senior Nutritionist</h4>
-              <p>Nidhi has been with Selfcare since 2011. She has done her Masters in Clinical Nutrition and Dietetics, She consults clients at Tardeo and Juhu and is also involved in online consultations. In her leisure time Nidhi enjoys listening to music, reading books about nutrition</p>
+              <p>Nidhi has been with Selfcare since 2011. She has done her Masters in Clinical Nutrition and Dietetics, She consults clients at Tardeo and Juhu and is also involved in online consultations. In her leisure time Nidhi enjoys listening to music, reading books about nutrition.</p>
             </div>
           </div>
         </div>
@@ -260,7 +259,7 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Jahnavi Gosalia</h3>
               <h4 class="brand-primary font-semibold">Nutritionist</h4>
-              <p>Jahnavi has joined selfcare in 2015.She has pursued her post Graduation in Clinical, Nutrition and Dietetics. She has a good and rich experience in Corporate Clientele.</p>
+              <p>Jahnavi has joined selfcare in 2015. She has pursued her post Graduation in Clinical, Nutrition and Dietetics. She has a good and rich experience in Corporate Clientele.</p>
               <p>She consults clients at selfcare tardeo and juhu branch and is involved in online consultations. In her free time, she loves to cook new recipes and her favorite form of exercise is walking.</p>
             </div>
           </div>
@@ -318,7 +317,7 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Kabita</h3>
               <h4 class="brand-primary font-semibold">Front Desk Manager</h4>
-              <p>Kabita is working with selfcare since 2007.She is handling Front desk and admin responsibilities in kolkata Branch .she has also completed certificate course in Clinical Nutrition and dietetics.</p>
+              <p>Kabita is working with selfcare since 2007. She is handling Front desk and admin responsibilities in kolkata Branch. She has also completed certificate course in Clinical Nutrition and dietetics.</p>
               <p>She loves to spend time with children’s and enjoy listening music.</p>
             </div>
           </div>
@@ -356,7 +355,7 @@
             <div class="member-detail">
               <h3 class="brand-brown-dark font-semibold">Adity Mitra</h3>
               <h4 class="brand-primary font-semibold">Relationship and Communication Manager</h4>
-              <p>Adity Joined selfcare in 2015 .she is passionately involved in mentoring Hamari Muskan, an organisation striving to mainstreaming prostituted women and their children for over six years.</p>
+              <p>Adity Joined selfcare in 2015. She is passionately involved in mentoring Hamari Muskan, an organisation striving to mainstreaming prostituted women and their children for over six years.</p>
               <p>A rich life experience has given her a broad base from which she has out-of-the-box approaches to diverse real life situations. She lives in Kolkata with her husband and loves to spend leisure with her pets ~ pair of Blue &amp; Gold Macaws.</p>
             </div>
           </div>
