--- a/views/footer.html
+++ b/views/footer.html
@@ -8,7 +8,7 @@
               <a href="#/home" title="Home">home</a>
             </li>
             <li>
-              <a href="#/coolsculpting" title="Cool Sclupting">Cool Sclupting</a>
+              <a href="#/coolsculpting" title="Cool Sculpting">CoolSculpting</a>
             </li>
             <li>
               <a href="#/nutrigenomics" title="Nutrigenomics">Nutrigenomics</a>
@@ -24,6 +24,12 @@
             </li>
             <li>
               <a href="#/blog" title="Blog">Blog</a>
+            </li>
+            <li>
+              <a href="#/faq" title="Faq">Faq</a>
+            </li>
+            <li>
+              <a href="#/careers" title="Careers">Careers</a>
             </li>
             <li>
               <a href="#contactus" title="Contact">Contact</a>
@@ -92,7 +98,7 @@
               </li>
               <li>
                 <a href="" title="Restaurant Menus">RESTAURANT MENUS
-                  <span class="block white" style="font-size:10px" ,padding-left="10px">(Coming Soon)</span>
+                  <span class="block white" style="font-size:10px; padding-left:10px">(Coming Soon)</span>
                 </a>
               </li>
             </ul>
