--- a/sass/main.scss
+++ b/sass/main.scss
@@ -887,13 +887,13 @@ button {
     }
   }
   .blog-info {
-    margin: 15px 0;
+    margin: 25px 0 15px;
     .last-blog-info {
       border: none;
     }
   }
   .blog-imgholder {
-    @include square(100px);
+    @include square(90px);
     border-radius: 4px;
     img {
       max-width: 100%;
@@ -903,7 +903,7 @@ button {
   }
   .blog-imginfo {
     min-height: 100px;
-    padding: 30px 30px 30px 10px;
+    // padding: 30px 30px 30px 10px;
     border-bottom: 2px solid $brand-brown;
     p {
       font-size: 22px;
@@ -953,7 +953,7 @@ button {
     }
     p {
       font-size: 17px;
-      margin: 10px 0 20px;
+      margin: 20px 0;
       line-height: 28px;
     }
   }
@@ -1297,7 +1297,6 @@ button {
   height: 425px;
   @extend.m-center;
   position: relative;
-  top: 50px;
 }
 .speech {
   margin: 60px 0;
@@ -1637,6 +1636,7 @@ footer {
     }
   }
   .menu2 {
+    h5 { margin-bottom: 5px; }
     ul {
       a {
         @extend.brand-brown-dark;
@@ -2075,14 +2075,16 @@ footer {
   }
 }
 .genes p {
-  font-size: 27px;
+   margin: 30px 0 0 25px;
+  font-size: 25px;
+  text-align: center;
   &:before {
     content: open-quote;
     color: #fff;
     font-family: "Vista Slab", "Helvetiva Neue", Helvetica;
     font-size: 170px;
     position: absolute;
-    top: -75px;
+    top: -45px;
     left: -20px;
     opacity: 0.5;
   }
@@ -2092,8 +2094,8 @@ footer {
     font-family: "Vista Slab", "Helvetiva Neue", Helvetica;
     font-size: 170px;
     position: absolute;
-    top: 85px;
-    right: -30px;
+    top: 100px;
+    right: 0px;
     opacity: 0.5;
   }
 }
