--- a/views/content/careers.html
+++ b/views/content/careers.html
@@ -55,7 +55,7 @@
           <button class="btn btn-primary send text-uppercase letter-space">send</button>
         </div>
       </form>
-      <div class="">
+      <div class="" style="display: none;">
         <h3 class="m-clear brand-brown-dark text-center">Welcome To The Selfcare Team.</h3>
       </div>
     </div>
