--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -26,9 +26,9 @@
               <br>
               <span>Next to A/C Market,</span>
               <br>
-              <span>Tardeo Main Road, Mumbai-400034</span>
+              <span>Tardeo Main Road, Mumbai-400 034</span>
               <br>
-              <span>t: <a href="tel:02261312222">022 61312222</a>, <a href="tel:9323217232">9323217232</a></span>
+              <span>t: <a href="tel:02261312222">022 61312222</a>, <a href="tel:+919323217232">+91 9323217232</a></span>
               <br>
               <span>f: <a href="tel:02261312200">022 61312200</a></span>
               <br>
@@ -43,9 +43,9 @@
               <br>
               <span>Landmark opposite 'Jalsa'</span>
               <br>
-              <span>West, Mumbai-400049.</span>
+              <span>West, Mumbai-400 049</span>
               <br>
-              <span>t: <a href="tel:9819725206">9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>,<br><a href="tel:+912226109432" class="san-num">+91 22-26109432</a></span>
+              <span>t: <a href="tel:+919819725206">+91 9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>,<br><a href="tel:+912226109432" class="san-num">+91 22-26109432</a></span>
               <br>
               <a href="https://goo.gl/maps/bDhwG4GYpcB2" target="_blank" class="text-uppercase brand-teal">View On Map</a>
             </div>
@@ -59,7 +59,7 @@
             <br>
             <span>Lansdowne - Hazra crossing,</span>
             <br>
-            <span>Kolkata - 7000206</span>
+            <span>Kolkata - 700 026</span>
             <br>
             <span>t: <a href="tel:03340708154">033-40708154</a> , <a href="tel: 03364571113"> 033-64571113</a></span>
             <br>
