--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -26,7 +26,7 @@
               <br>
               <span>Next to A/C Market,</span>
               <br>
-              <span>Tardeo Main Road, Mumbai-400 034</span>
+              <span>Tardeo Main Road, Mumbai - 400 034</span>
               <br>
               <span>t: <a href="tel:02261312222">022 61312222</a>, <a href="tel:+919323217232">+91 9323217232</a></span>
               <br>
@@ -43,7 +43,7 @@
               <br>
               <span>Landmark opposite 'Jalsa'</span>
               <br>
-              <span>West, Mumbai-400 049</span>
+              <span>West, Mumbai - 400 049</span>
               <br>
               <span>t: <a href="tel:+919819725206">+91 9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>,<br><a href="tel:+912226109432" class="san-num">+91 22-26109432</a></span>
               <br>
