--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -69,7 +69,7 @@
             Do we get a grace period in case we are unable to achieve our target weight in the given time span?<i class="open-me fa" ng-class="{'fa-minus': status.open8, 'fa-plus': !status.open8}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
-            <p class="text-justify">Yes. Definitely Depending upon the package taken by the client i.e. in Gold package clients will get 2 weeks grace period where as Platinum & Diamond package clients will get 4 weeks grace period.</p>
+            <p class="text-justify">Yes, definitely. Depending upon the package taken by the client i.e. in Gold package clients will get 2 weeks grace period where as Platinum &amp; Diamond package clients will get 4 weeks grace period.</p>
           </div>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open9">
@@ -93,7 +93,7 @@
             Do you give tablets to lose weight?<i class="open-me fa" ng-class="{'fa-minus': status.open11, 'fa-plus': !status.open11}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
-            <p class="text-justify">No, we do not give tablets to lose weight , but we recommend vitamins. We believe in a holistic approach while preparing a diet plan. We suggest few vitamins along with a healthy diet plan and personalized exercise schedule which can aid in improving your immunity, stamina, fat metabolism and basal metabolism etc. while giving a weight loss plan we make sure that you are only losing fat. Not losing muscle, hair, skin and mind.</p>
+            <p class="text-justify">No, we do not give tablets to lose weight , but we recommend vitamins. We believe in a holistic approach while preparing a diet plan. We suggest few vitamins along with a healthy diet plan and personalized exercise schedule which can aid in improving your immunity, stamina, fat metabolism and basal metabolism etc. While giving a weight loss plan, we make sure that you are only losing fat; Not losing muscle, hair, skin and mind.</p>
           </div>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open12">
@@ -101,7 +101,7 @@
             Can we gift these programs to our family members or friends?<i class="open-me pull-right fa" ng-class="{'fa-minus': status.open12, 'fa-plus': !status.open12}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
-            <p class="text-justify">Yes of course. Health is the best gift which one can give. You can avail for our gift vouchers at our clinic or call on this number <a href="tel:61312222">61312222</a> for the same.</p>
+            <p class="text-justify">Yes of course. Health is the best gift which one can give. You can avail for our gift vouchers at our clinic or call on this number <a href="tel:02261312222">022 61312222</a> for the same.</p>
           </div>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open13">
@@ -109,14 +109,14 @@
             Do you have plans for kids as well?<i class="open-me fa" ng-class="{'fa-minus': status.open13, 'fa-plus': !status.open13}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
-            <p class="text-justify">Yes we do have monthly health management plans for duration of 2-4months for kids in which supports fat loss, weight loss, height gain, sports nutrition and problems such has weight gain, low immunity, low vitamin levels and hormonal problems.</p>
+            <p class="text-justify">Yes, we do have monthly health management plans for duration of 2-4 months for kids which supports fat loss, weight loss, height gain, sports nutrition and problems such as weight gain, low immunity, low vitamin levels and hormonal problems.</p>
           </div>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open14">
           <uib-accordion-heading>Do you have packages other than weight loss, like detox or bridal package?<i class="open-me fa" ng-class="{'fa-minus': status.open14, 'fa-plus': !status.open14}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
-            <p class="text-justify">Yes we do have monthly packages for to-be brides where we focus on healthy hair, skin, nails, weight loss and body toning. If your Big day is 2-3 months away from the day of your joining a plan, you can consider our new age cool sculpting plan to remove your stubborn areas of fat. Apart from weight loss we have other packages that include Ailment control, Diet During Pregnancy,Healthy ageing with skin and hair care, Diet for post cancer, Diet for Weight gain, Specialized diet for senior citizens, Diet for kids and teenagers, 4 week detox diet, Cool sculpting for spot reduction and contouring.</p>
+            <p class="text-justify">Yesz we do have monthly packages for to-be brides where we focus on healthy hair, skin, nails, weight loss and body toning. If your Big day is 2-3 months away from the day of your joining a plan, you can consider our new age CoolSculpting plan to remove your stubborn areas of fat. Apart from weight loss we have other packages that include Ailment control, Diet During Pregnancy, Healthy ageing with skin and hair care, Diet for post cancer, Diet for Weight gain, Specialized diet for senior citizens, Diet for kids and teenagers, 4 week detox diet, Cool sculpting for spot reduction and contouring.</p>
           </div>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open15">
