--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -275,14 +275,14 @@
             <div class="more-abt-tina">
               <h2 class="text-uppercase brand-primary consult-head">know more about tina</h2>
               <div class="descp text-justify">
-                <p class="m-clear">
+                <p class="">
                   An AICI consultant Tina is a <b>Personal Image consultant, Corporate Speaker and Personal Stylist.</b> She has a masters degree in Luxury Marketing and Management from France. She has practiced her Image and Grooming skills in the luxury
                   industry in fashion across the globe in <b>France, Germany, China and Hong Kong.</b>Tina hopes to <b>empower people by teaching them</b> the power of <b>Image &amp; Personal Branding.</b>
                 </p>
-                <p class="m-clear">Her personal styling services caters to clients at all ages from 14 years onwards men, women and younger girls. <b>Her services involve personal styling for men and women, bridal and trousseau services as well as corporate image management.</b></p>
-                <p class="m-clear">
+                <p class="">Her personal styling services caters to clients at all ages from 14 years onwards men, women and younger girls. <b>Her services involve personal styling for men and women, bridal and trousseau services as well as corporate image management.</b></p>
+                <p class="">
                   Her recent achievements include; A diploma in Personal Branding &amp; Menswear from the prestigious <b>Image Professional Institute - NY, USA.</b></p>
-                <p class="m-clear">Adding to this she is now part of the faculty at <b>Fashion institute and representative of UK-Nottingham in Mumbai Pearl Academy.</b></p>
+                <p class="">Adding to this she is now part of the faculty at <b>Fashion institute and representative of UK-Nottingham in Mumbai Pearl Academy.</b></p>
               </div>
             </div>
           </div>
@@ -687,7 +687,7 @@
               <div class="testi-detail">
                 <h3 class="name brand-primary m-clear visible-xs">Amruta Mauskar</h3>
                 <h4 class="profession brand-primary m-clear visible-xs">Profesional and Dancer</h4>
-                <p class="text-justify">A girl with amazing fashion sense. Instead of writing something about you I would like to be honest and confess the changes you brough in my fashion sense. You made me realise rather than running after and spending huge amount of money
+                <p class="text-justify">A girl with amazing fashion sense. Instead of writing something about you I would like to be honest and confess the changes you brought in my fashion sense. You made me realise rather than running after and spending huge amount of money
                   on fashionable designer clothes, it is important to have good physic. Your skill in fixing &amp; matching out of existing clothes &amp; taking care of pocket is well appreciated. I would like to mention that my fashion sense right from
                   head to toe has been very well taken care by you.</p>
                 <h3 class="name brand-primary m-clear hidden-xs">Amruta Mauskar</h3>
