--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -93,7 +93,7 @@
             Do you give tablets to lose weight?<i class="open-me fa" ng-class="{'fa-minus': status.open11, 'fa-plus': !status.open11}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
-            <p class="text-justify">No, we do not give tablets to lose weight , but we recommend vitamins. We believe in a holistic approach while preparing a diet plan. We suggest few vitamins along with a healthy diet plan and personalized exercise schedule which can aid in improving your immunity, stamina, fat metabolism and basal metabolism etc. While giving a weight loss plan, we make sure that you are only losing fat; Not losing muscle, hair, skin and mind.</p>
+            <p class="text-justify">No, we do not give tablets to lose weight but, we recommend vitamins. We believe in a holistic approach while preparing a diet plan. We suggest few vitamins along with a healthy diet plan and personalized exercise schedule which can aid in improving your immunity, stamina, fat metabolism and basal metabolism etc. While giving a weight loss plan, we make sure that you are only losing fat; Not losing muscle, hair, skin and mind.</p>
           </div>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open12">
@@ -116,7 +116,7 @@
           <uib-accordion-heading>Do you have packages other than weight loss, like detox or bridal package?<i class="open-me fa" ng-class="{'fa-minus': status.open14, 'fa-plus': !status.open14}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
-            <p class="text-justify">Yesz we do have monthly packages for to-be brides where we focus on healthy hair, skin, nails, weight loss and body toning. If your Big day is 2-3 months away from the day of your joining a plan, you can consider our new age CoolSculpting plan to remove your stubborn areas of fat. Apart from weight loss we have other packages that include Ailment control, Diet During Pregnancy, Healthy ageing with skin and hair care, Diet for post cancer, Diet for Weight gain, Specialized diet for senior citizens, Diet for kids and teenagers, 4 week detox diet, Cool sculpting for spot reduction and contouring.</p>
+            <p class="text-justify">Yes, we do have monthly packages for to-be brides where we focus on healthy hair, skin, nails, weight loss and body toning. If your Big day is 2-3 months away from the day of your joining a plan, you can consider our new age CoolSculpting plan to remove your stubborn areas of fat. Apart from weight loss we have other packages that include Ailment control, Diet During Pregnancy, Healthy ageing with skin and hair care, Diet for post cancer, Diet for Weight gain, Specialized diet for senior citizens, Diet for kids and teenagers, 4 week detox diet, Cool sculpting for spot reduction and contouring.</p>
           </div>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open15">
